--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 </head>
 
 <body>
-
-  </div>
+  <header class="header"></header>
+  <!-- /.header -->
+  <section class="form-quiz">
+    <img src="" alt="" class="logo">
+    <div class="progess-bar"></div>
+    <!-- /.progess-bar -->
+    <div class="form-quiz__item"></div>
+    <!-- /.form-quiz__item -->
+  </section>
+  <footer class="footer"></footer>
+  <!-- /.footer -->
+  <script src="js/index.js"></script>
 </body>
 
 </html>
