add start window

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 </head>
 
 <body>
-  <header class="header"></header>
+  <header class="header">
+    <div class="header-item header-item__img">
+      <!-- <img src="img/bg.png" alt=""> -->
+    </div>
+    <!-- /.header-item__img -->
+    <div class="header-item header-item__content">
+      <svg class="logo">
+        <use xlink:href="img/sprite.svg#logo"></use>
+      </svg>
+      <h3 class="title">Самое время выбрать дизайн</h3>
+      <span class="subtitle">Пройди опрос и получи скидку на первый заказ</span>
+      <button class="btn">
+        Начать
+        <svg class="arrow-right">
+          <use xlink:href="img/sprite.svg#arrow-right"></use>
+        </svg>
+      </button>
+      <span class="header-item__link">Очень жаль что вы передумали. <a class="header-item__link--backout"
+          href="https://www.webhuman.ru/">Вернуться на главную</a></span>
+    </div>
+    <!-- /.header-content -->
+  </header>
   <!-- /.header -->
   <section class="form-quiz">
     <img src="" alt="" class="logo">
