create first step(window) quiz

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- /.header -->
   <section class="form-quiz">
     <div class=" container">
-      <svg class="logo">
+      <svg class="logo logo-form-quiz">
         <use xlink:href="img/sprite.svg#logo"></use>
       </svg>
       <div class="progress-bar">
@@ -68,30 +68,33 @@
         </div>
       </div>
       <!-- /.progess-bar -->
-
+      <!-- Первый шаг в квизе -->
       <div class="form-quiz-items">
         <div class="form-quiz-item">
-          <h3 class="title">Lorem ipsum dolor sit amet.</h3>
-          <span class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum temporibus consequatur
-            nisi praesentium, cupiditate voluptates odio ut possimus aperiam corrupti?</span>
-          <!-- <input class="type-design" type="radio" name="type-design">
-          <input class="type-design" type="radio" name="type-design">
-          <div class="form-quiz-cards">
-            <div class="form-quiz-card">
-              <h4 class="form-quiz-card__title">Lorem.</h4>
-              <img class="form-quiz-card__img" src="img/bag.png" alt="">
-            </div> -->
-          <!-- /.form-quiz__card -->
-          <!-- <div class="form-quiz-card">
-            <h4 class="form-quiz-card__title">Lorem.</h4>
-            <img class="form-quiz-card__img" src="img/man.png" alt="">
-          </div> -->
-          <!-- /.form-quiz__card -->
-          <!-- </div> -->
+          <h3 class="title">Какова деятельность вашего сайта?</h3>
+          <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
+            пользователя.</p>
+          <div class="form-quiz-cards first-step-cards">
+            <input class="type-design" type="radio" name="type-design">
+            <input class="type-design" type="radio" name="type-design">
+            <div tabindex="1" class="form-quiz-card first-step-card">
+              <h4 class="form-quiz-card__title">Коммерческая</h4>
+              <img class="form-quiz-card__img" src="img/first-step/commercial.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="2" class="form-quiz-card first-step-card">
+              <h4 class="form-quiz-card__title">Частная</h4>
+              <img class="form-quiz-card__img" src="img/first-step/private.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+          </div>
           <!-- /.form-quiz__cards -->
         </div>
         <!-- /.form-quiz__item -->
-        <div class="form-quiz-item"></div>
+        <!-- Второй шаг в квизе -->
+        <div class="form-quiz-item">
+
+        </div>
         <!-- /.form-quiz__item -->
         <div class="form-quiz-item"></div>
         <!-- /.form-quiz__item -->
