--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
         <!-- /.form-quiz__item -->
         <!-- Второй шаг в квизе -->
         <div class="form-quiz-item">
-
+          <h3 class="title">Какой бюджет выделен на проект?</h3>
+          <p class="subtitle">Хороший дизайн-макет - не значит дрогой.</p>
+          <div class="budget-content">
+            <input class="budget-content__slider" value="1550" min="100" max="3000" type="range">
+            <div class="budget-content__output">1550$</div>
+          </div>
+          <!-- /.budget-content -->
         </div>
         <!-- /.form-quiz__item -->
         <div class="form-quiz-item"></div>
