create third  step(window) quiz

--- a/index.html
+++ b/index.html
@@ -102,16 +102,52 @@
           <!-- /.budget-content -->
         </div>
         <!-- /.form-quiz__item -->
-        <div class="form-quiz-item"></div>
+        <!-- Третий шаг в квизе -->
+        <div class="form-quiz-item">
+          <h3 class="title">Выберите сложности вашего проекта?</h3>
+          <p class="subtitle">Куча фунций и фич, минимализм или же золотая середина.</p>
+          <div class="form-quiz-cards third-step-cards">
+            <input class="type-level" type="radio" name="type-level">
+            <input class="type-level" type="radio" name="type-level">
+            <input class="type-level" type="radio" name="type-level">
+            <div tabindex="1" class="form-quiz-card third-step-card">
+              <h4 class="form-quiz-card__title">Минимум</h4>
+              <img class="form-quiz-card__img" src="img/third-step/low.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="2" class="form-quiz-card third-step-card">
+              <h4 class="form-quiz-card__title">Средний</h4>
+              <img class="form-quiz-card__img" src="img/third-step/middle.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex=" 3" class="form-quiz-card third-step-card">
+              <h4 class="form-quiz-card__title">Максиум</h4>
+              <img class="form-quiz-card__img" src="img/third-step/hard.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+          </div>
+          <!-- /.form-quiz__cards -->
+        </div>
         <!-- /.form-quiz__item -->
-        <div class="form-quiz-item"></div>
+        <!-- Четвертый шаг -->
+        <div class="form-quiz-item">
+          <h3 class="title">Какова деятельность вашего сайта?</h3>
+          <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
+            пользователя.</p>
+        </div>
         <!-- /.form-quiz__item -->
-        <div class="form-quiz-item"></div>
+        <!-- Пятый шаг -->
+        <div class="form-quiz-item">
+          <h3 class="title">Какова деятельность вашего сайта?</h3>
+          <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
+            пользователя.</p>
+        </div>
         <!-- /.form-quiz__item -->
+
+        <button class="btn btn-prev">Назад</button>
+        <button class="btn btn-next">Продолжить</button>
       </div>
       <!-- /.form-quiz__items -->
-      <button class="btn btn-prev">Назад</button>
-      <button class="btn btn-next">Продолжить</button>
     </div>
     <!-- /.container -->
   </section>
