word of optimized in 1 & 3 steps

--- a/index.html
+++ b/index.html
@@ -146,12 +146,13 @@
 
         <button class="btn btn-prev">Назад</button>
         <button class="btn btn-next">Продолжить</button>
+        <!-- <button type="submit" class="btn btn-send">Отправить</button> -->
       </div>
       <!-- /.form-quiz__items -->
     </div>
     <!-- /.container -->
   </section>
-  <script src="js/index.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
