fix: firs step(window)

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <input class="type-design" type="radio" name="type-design">
             <input class="type-design" type="radio" name="type-design">
             <div tabindex="1" class="form-quiz-card first-step-card">
-              <h4 class="form-quiz-card__title">Коммерческая</h4>
-              <img class="form-quiz-card__img" src="img/first-step/commercial.png" alt="">
+              <h4 class="form-quiz-card__title">Корпоративная</h4>
+              <img class="form-quiz-card__img first-step-img" src="img/first-step/corporate.png" alt="">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="2" class="form-quiz-card first-step-card">
               <h4 class="form-quiz-card__title">Частная</h4>
-              <img class="form-quiz-card__img" src="img/first-step/private.png" alt="">
+              <img class="form-quiz-card__img first-step-img" src="img/first-step/private.png" alt="">
             </div>
             <!-- /.form-quiz__card -->
           </div>
@@ -134,6 +134,21 @@
           <h3 class="title">Какова деятельность вашего сайта?</h3>
           <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
             пользователя.</p>
+          <div class="form-quiz-cards fourth-step-cards">
+            <input class="type-design" type="radio" name="type-design">
+            <input class="type-design" type="radio" name="type-design">
+            <div tabindex="1" class="form-quiz-card fourth-step-card">
+              <h4 class="form-quiz-card__title">Корпоративная</h4>
+              <img class="form-quiz-card__img" src="img/first-step/corporate.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="2" class="form-quiz-card fourth-step-card">
+              <h4 class="form-quiz-card__title">Частная</h4>
+              <img class="form-quiz-card__img" src="img/first-step/private.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+          </div>
+          <!-- /.form-quiz__cards -->
         </div>
         <!-- /.form-quiz__item -->
         <!-- Пятый шаг -->
