--- a/index.html
+++ b/index.html
@@ -131,20 +131,43 @@
         <!-- /.form-quiz__item -->
         <!-- Четвертый шаг -->
         <div class="form-quiz-item">
-          <h3 class="title">Какова деятельность вашего сайта?</h3>
-          <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
-            пользователя.</p>
+          <h3 class="title">Какой тип сайта вам больше подходит?</h3>
+          <p class="subtitle">Если из представленных ничего не подошло, выберите "другое".</p>
           <div class="form-quiz-cards fourth-step-cards">
-            <input class="type-design" type="radio" name="type-design">
-            <input class="type-design" type="radio" name="type-design">
+            <input class="type-site" type="radio" name="type-site">
+            <input class="type-site" type="radio" name="type-site">
+            <input class="type-site" type="radio" name="type-site">
+            <input class="type-site" type="radio" name="type-site">
+            <input class="type-site" type="radio" name="type-site">
+            <input class="type-site" type="radio" name="type-site">
             <div tabindex="1" class="form-quiz-card fourth-step-card">
-              <h4 class="form-quiz-card__title">Корпоративная</h4>
-              <img class="form-quiz-card__img" src="img/first-step/corporate.png" alt="">
+              <h4 class="form-quiz-card__title fourth-step-title">Landing page</h4>
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/landing-page.png" alt="">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="2" class="form-quiz-card fourth-step-card">
-              <h4 class="form-quiz-card__title">Частная</h4>
-              <img class="form-quiz-card__img" src="img/first-step/private.png" alt="">
+              <h4 class="form-quiz-card__title fourth-step-title">Интернет магазин</h4>
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/shop.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="3" class="form-quiz-card fourth-step-card">
+              <h4 class="form-quiz-card__title fourth-step-title">Веб-приложение</h4>
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/app.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="4" class="form-quiz-card fourth-step-card">
+              <h4 class="form-quiz-card__title fourth-step-title">Портфолио</h4>
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/cv.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="5" class="form-quiz-card fourth-step-card">
+              <h4 class="form-quiz-card__title fourth-step-title">Личный блог</h4>
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/blog.png" alt="">
+            </div>
+            <!-- /.form-quiz__card -->
+            <div tabindex="6" class="form-quiz-card fourth-step-card">
+              <h4 class="form-quiz-card__title fourth-step-title">Другое</h4>
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/other.png" alt="">
             </div>
             <!-- /.form-quiz__card -->
           </div>
