fix: func (checked and scroll)

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
             пользователя.</p>
           <div class="form-quiz-cards first-step-cards">
-            <input class="type-design" type="radio" name="type-design">
-            <input class="type-design" type="radio" name="type-design">
+            <input class="type-design" type="radio" value="Корпоративная" name="type-design">
+            <input class="type-design" type="radio" value="Частная" name="type-design">
             <div tabindex="1" class="form-quiz-card first-step-card">
               <h4 class="form-quiz-card__title">Корпоративная</h4>
               <img class="form-quiz-card__img first-step-img" src="img/first-step/corporate.png" alt="">
@@ -97,7 +97,7 @@
           <p class="subtitle">Хороший дизайн-макет - не значит дрогой.</p>
           <div class="budget-content">
             <input class="budget-content__slider" value="1550" min="100" max="3000" type="range">
-            <div class="budget-content__output">1550$</div>
+            <div class="budget-content__output"></div>
           </div>
           <!-- /.budget-content -->
         </div>
@@ -134,12 +134,12 @@
           <h3 class="title">Какой тип сайта вам больше подходит?</h3>
           <p class="subtitle">Если из представленных ничего не подошло, выберите "другое".</p>
           <div class="form-quiz-cards fourth-step-cards">
-            <input class="type-site" type="radio" name="type-site">
-            <input class="type-site" type="radio" name="type-site">
-            <input class="type-site" type="radio" name="type-site">
-            <input class="type-site" type="radio" name="type-site">
-            <input class="type-site" type="radio" name="type-site">
-            <input class="type-site" type="radio" name="type-site">
+            <input class="type-site" type="radio" value="Landing page" name="type-site">
+            <input class="type-site" type="radio" value="Интернет магазин" name="type-site">
+            <input class="type-site" type="radio" value="Веб-приложение" name="type-site">
+            <input class="type-site" type="radio" value="Портфолио" name="type-site">
+            <input class="type-site" type="radio" value="Личный блог" name="type-site">
+            <input class="type-site" type="radio" value="Другое" name="type-site">
             <div tabindex="1" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Landing page</h4>
               <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/landing-page.png" alt="">
