--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
             <input class="type-design" type="radio" value="Частная" name="type-design">
             <div tabindex="1" class="form-quiz-card first-step-card">
               <h4 class="form-quiz-card__title">Корпоративная</h4>
-              <img class="form-quiz-card__img first-step-img" src="img/first-step/corporate.png" alt="">
+              <img class="form-quiz-card__img first-step-img" src="img/first-step/corporate.png"
+                alt="icon: Корпоративная">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="2" class="form-quiz-card first-step-card">
               <h4 class="form-quiz-card__title">Частная</h4>
-              <img class="form-quiz-card__img first-step-img" src="img/first-step/private.png" alt="">
+              <img class="form-quiz-card__img first-step-img" src="img/first-step/private.png" alt="icon: Частная">
             </div>
             <!-- /.form-quiz__card -->
           </div>
@@ -107,22 +108,22 @@
           <h3 class="title">Выберите сложности вашего проекта?</h3>
           <p class="subtitle">Куча фунций и фич, минимализм или же золотая середина.</p>
           <div class="form-quiz-cards third-step-cards">
-            <input class="type-level" type="radio" name="type-level">
-            <input class="type-level" type="radio" name="type-level">
-            <input class="type-level" type="radio" name="type-level">
+            <input class="type-level" type="radio" value="Минимум" name="type-level">
+            <input class="type-level" type="radio" value="Средний" name="type-level">
+            <input class="type-level" type="radio" value="Максиум" name="type-level">
             <div tabindex="1" class="form-quiz-card third-step-card">
               <h4 class="form-quiz-card__title">Минимум</h4>
-              <img class="form-quiz-card__img" src="img/third-step/low.png" alt="">
+              <img class="form-quiz-card__img" src="img/third-step/low.png" alt="icon: Минимум">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="2" class="form-quiz-card third-step-card">
               <h4 class="form-quiz-card__title">Средний</h4>
-              <img class="form-quiz-card__img" src="img/third-step/middle.png" alt="">
+              <img class="form-quiz-card__img" src="img/third-step/middle.png" alt="icon: Средней">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex=" 3" class="form-quiz-card third-step-card">
               <h4 class="form-quiz-card__title">Максиум</h4>
-              <img class="form-quiz-card__img" src="img/third-step/hard.png" alt="">
+              <img class="form-quiz-card__img" src="img/third-step/hard.png" alt="icon: Максимум">
             </div>
             <!-- /.form-quiz__card -->
           </div>
@@ -142,32 +143,34 @@
             <input class="type-site" type="radio" value="Другое" name="type-site">
             <div tabindex="1" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Landing page</h4>
-              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/landing-page.png" alt="">
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/landing-page.png"
+                alt="icon: Landing page">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="2" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Интернет магазин</h4>
-              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/shop.png" alt="">
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/shop.png"
+                alt="icon: Интернет магазин">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="3" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Веб-приложение</h4>
-              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/app.png" alt="">
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/app.png" alt="icon: Веб-приложение">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="4" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Портфолио</h4>
-              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/cv.png" alt="">
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/cv.png" alt="icon: Портфолио">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="5" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Личный блог</h4>
-              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/blog.png" alt="">
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/blog.png" alt="icon: Личный блог">
             </div>
             <!-- /.form-quiz__card -->
             <div tabindex="6" class="form-quiz-card fourth-step-card">
               <h4 class="form-quiz-card__title fourth-step-title">Другое</h4>
-              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/other.png" alt="">
+              <img class="form-quiz-card__img fourth-step-img" src="img/fourth-step/other.png" alt="icon: Другое">
             </div>
             <!-- /.form-quiz__card -->
           </div>
@@ -176,15 +179,23 @@
         <!-- /.form-quiz__item -->
         <!-- Пятый шаг -->
         <div class="form-quiz-item">
-          <h3 class="title">Какова деятельность вашего сайта?</h3>
-          <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
-            пользователя.</p>
+          <h3 class="title">Введите ваши данные для связи</h3>
+          <p class="subtitle">Оставьте необходимую информацию и мы свами свяжемся в ближайшее время.</p>
+          <form action="#" class="fifth-step">
+            <input autocomplete="off" name="user_name" placeholder="Ваше имя*" type=" text"
+              class="fifth-step-input fifth-step-input__name">
+            <input autocomplete="off" name="user_phone" placeholder="Ваше телефон*" type="number"
+              class="fifth-step-input fifth-step-input__phone">
+            <textarea autocomplete="off" name="user_comment" placeholder="Комментарий к заказу"
+              class="fifth-step-input fifth-step-input__comment"></textarea>
+            <span class="required">* - обязательное поле для ввода</span>
+          </form>
         </div>
         <!-- /.form-quiz__item -->
 
         <button class="btn btn-prev">Назад</button>
         <button class="btn btn-next">Продолжить</button>
-        <!-- <button type="submit" class="btn btn-send">Отправить</button> -->
+        <button type="submit" class="btn btn-send">Отправить</button>
       </div>
       <!-- /.form-quiz__items -->
     </div>
