--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <!-- /.progess-bar -->
       <!-- Первый шаг в квизе -->
-      <div class="form-quiz-items">
+      <form action="telegram.php" method="post" class="form-quiz-items">
         <div class="form-quiz-item">
           <h3 class="title">Какова деятельность вашего сайта?</h3>
           <p class="subtitle">Мощный инстурмент для вашего бизнеса или же уникальная и индивидуальная страница
@@ -97,7 +97,7 @@
           <h3 class="title">Какой бюджет выделен на проект?</h3>
           <p class="subtitle">Хороший дизайн-макет - не значит дрогой.</p>
           <div class="budget-content">
-            <input class="budget-content__slider" value="1550" min="100" max="3000" type="range">
+            <input class="budget-content__slider" name="budget" value="1550$" min="100" max="3000" type="range">
             <div class="budget-content__output"></div>
           </div>
           <!-- /.budget-content -->
@@ -181,7 +181,7 @@
         <div class="form-quiz-item">
           <h3 class="title">Введите ваши данные для связи</h3>
           <p class="subtitle">Оставьте необходимую информацию и мы свами свяжемся в ближайшее время.</p>
-          <form action="#" class="fifth-step">
+          <div class="fifth-step">
             <input autocomplete="off" name="user_name" maxlength="11" placeholder="Ваше имя*" type=" text"
               class="input fifth-step-input fifth-step-input__name">
             <input autocomplete="off" minlength="10" maxlength="12" name="user_phone" placeholder="Ваше телефон*"
@@ -189,14 +189,13 @@
             <textarea autocomplete="off" name="user_comment" placeholder="Комментарий к заказу"
               class="fifth-step-input fifth-step-input__comment"></textarea>
             <span class="required">* - обязательное поле (после ввода кнопка станет активной)</span>
-          </form>
+          </div>
         </div>
         <!-- /.form-quiz__item -->
-
         <button class="btn btn-prev">Назад</button>
-        <button class="btn btn-next">Продолжить</button>
         <button type="submit" class="btn btn-send">Отправить</button>
-      </div>
+        <button class="btn btn-next">Продолжить</button>
+      </form>
       <!-- /.form-quiz__items -->
     </div>
     <!-- /.container -->
