creat page success

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -21,12 +21,12 @@
       </svg>
       <h3 class="title">Самое время выбрать дизайн</h3>
       <span class="subtitle">Пройди опрос и получи скидку на первый заказ</span>
-      <buttobutton class="btn btn-start">
+      <button class="btn btn-start">
         Начать
         <svg class="arrow-right">
           <use xlink:href="img/sprite.svg#arrow-right"></use>
         </svg>
-      </buttobutton>
+      </button>
       <span class="header-item__link">Очень жаль что вы передумали. <a class="header-item__link--backout"
           href="https://www.webhuman.ru/">Вернуться на главную</a></span>
     </div>
