add name in sessionStorage

--- a/success.html
+++ b/success.html
@@ -19,7 +19,8 @@
         </svg>
       </a>
       <h3 class="title">Успех! Ваша заявка отправлена.</h3>
-      <p class="subtitle success-subtitle">Ваш промокод на скидку при первом заказе
+      <p class="subtitle success-subtitle"><span class="user-name"></span>, Ваш промокод на скидку при первом
+        заказе.
       </p>
       <span class="promocode"></span>
       <div class="success-telegram-channel">
