--- a/success.html
+++ b/success.html
@@ -18,7 +18,7 @@
           <use xlink:href="img/sprite.svg#logo"></use>
         </svg>
       </a>
-      <h3 class="title">Успех! Ваша заявка отправлена.</h3>
+      <h3 class="title success-title">Успех! Ваша заявка отправлена.</h3>
       <p class="subtitle success-subtitle"><span class="user-name"></span>, Ваш промокод на скидку при первом
         заказе.
       </p>
